--- a/app/components/css/landing.css
+++ b/app/components/css/landing.css
@@ -17,7 +17,7 @@ body {
   padding: 5px;
 }
 
-.box h1 a {
+.box h1 {
   text-decoration: none;
   font-family: 'Lobster', cursive;
   font-size: 60px;
@@ -36,4 +36,8 @@ body {
 .box p {
   color: #061543;
   font-family: 'Roboto', sans-serif;
+}
+
+a {
+  text-decoration: none;
 }
